# MdMaker

./: .gitignore  .kilocodeignore  CLAUDE.md  JSON_FILE_FORMAT_DESIGN.md  MIGRATION_GUIDE.md  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: ai.py  config.py  documents.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/middleware/: error_handler.py  logging.py
backend/app/schemas/: ai.py  config.py  document.py
backend/app/services/: streaming.py
backend/app/services/ai/: __init__.py  base.py  deepseek.py  factory.py  ollama.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  AtSyntaxParser.ts  MessageItem.tsx  TreeDemo.tsx  TreeRenderer.tsx  ai-providers.json  index.css  useAtSyntax.ts
frontend/src/components/ai-assistant/: AIAssistantDrawer.tsx  AIFloatingButton.tsx  EmptyView.tsx  QuickActions.tsx  SettingsPanel.tsx  TiptapAtMenu.tsx  TiptapInput.css  TiptapInput.tsx
frontend/src/components/codeact/: ActionCard.tsx  CodeActTimeline.tsx  InlineModeSelector.tsx  ObservationCard.tsx  (+3 more)
frontend/src/hooks/: useAIChat.ts  useAIConfig.ts  useCodeActExecution.ts  useDocument.ts  useTiptapAtSyntax.ts
src/: App.tsx  AtSuggestionsMenu.tsx  MessageItem.tsx  TreeDemo.tsx  TreeRenderer.tsx  ai-providers.json  index.css  promptTemplates.ts
src/types/: MdAiFile.ts
src/utils/: FileOperations.ts  MdAiFileHandler.ts  messageUtils.ts
(+10 files in other folders)
